--- a/Trivia.UI/Trivia.UI.csproj
+++ b/Trivia.UI/Trivia.UI.csproj
@@ -54,6 +54,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="QuizzardInitialPage.xaml.cs">
+      <DependentUpon>QuizzardInitialPage.xaml</DependentUpon>
+    </Compile>
     <Page Include="GameStart.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -73,19 +76,16 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="NextPage.xaml">
+    <Page Include="PlayerMode.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PlayerMode.xaml">
+    <Page Include="QuizzardInitialPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NextPage.xaml.cs">
-      <DependentUpon>NextPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="PlayerMode.xaml.cs">
       <DependentUpon>PlayerMode.xaml</DependentUpon>
     </Compile>
