Quizzard initial page - question and answers are now taken as strings

--- a/Trivia.UI/Trivia.UI.csproj
+++ b/Trivia.UI/Trivia.UI.csproj
@@ -114,5 +114,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Trivia\Trivia.csproj">
+      <Project>{DCA06CD0-F54F-4EA9-A7E0-5C21961A3F03}</Project>
+      <Name>Trivia</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
