--- a/Trivia.Core/Trivia.Core.csproj
+++ b/Trivia.Core/Trivia.Core.csproj
@@ -42,6 +42,9 @@
   <ItemGroup>
     <Compile Include="DB.cs" />
     <Compile Include="Engine.cs" />
+    <Compile Include="Factory.cs" />
+    <Compile Include="Contracts\IEngine.cs" />
+    <Compile Include="Contracts\IFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
