--- a/Trivia.UI/Trivia.UI.csproj
+++ b/Trivia.UI/Trivia.UI.csproj
@@ -57,8 +57,14 @@
     <Compile Include="QuizzardInitialPage.xaml.cs">
       <DependentUpon>QuizzardInitialPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RightAnswer.xaml.cs">
+      <DependentUpon>RightAnswer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="StartQuizzardTest.xaml.cs">
       <DependentUpon>StartQuizzardTest.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WrongAnswer.xaml.cs">
+      <DependentUpon>WrongAnswer.xaml</DependentUpon>
     </Compile>
     <Page Include="GameStart.xaml">
       <SubType>Designer</SubType>
@@ -87,7 +93,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="RightAnswer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="StartQuizzardTest.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WrongAnswer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
