--- a/Trivia.UI/Trivia.UI.csproj
+++ b/Trivia.UI/Trivia.UI.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A8D6F766-6E38-4F3F-9146-DD4D07704911}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>GroupProject_Test_02</RootNamespace>
-    <AssemblyName>GroupProject_Test_02</AssemblyName>
+    <RootNamespace>Trivia.UI</RootNamespace>
+    <AssemblyName>Trivia</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -136,8 +136,16 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Trivia.Core\Trivia.Core.csproj">
+      <Project>{e0191a63-82a3-4216-8fb5-22cc07baecf5}</Project>
+      <Name>Trivia.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Trivia.Program\Trivia.Program.csproj">
+      <Project>{72540ea8-5a8d-48a9-bd0a-db77b6a6e340}</Project>
+      <Name>Trivia.Program</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Trivia\Trivia.csproj">
-      <Project>{DCA06CD0-F54F-4EA9-A7E0-5C21961A3F03}</Project>
+      <Project>{dca06cd0-f54f-4ea9-a7e0-5c21961a3f03}</Project>
       <Name>Trivia</Name>
     </ProjectReference>
   </ItemGroup>
