--- a/Trivia.Program/Trivia.Program.csproj
+++ b/Trivia.Program/Trivia.Program.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{72540EA8-5A8D-48A9-BD0A-DB77B6A6E340}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TriviaGame</RootNamespace>
+    <RootNamespace>Trivia.Program</RootNamespace>
     <AssemblyName>Trivia.Program</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
