--- a/Trivia/Trivia.csproj
+++ b/Trivia/Trivia.csproj
@@ -40,12 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\CategoryType.cs" />
-    <Compile Include="Common\HintType.cs" />
-    <Compile Include="Common\PlayerType.cs" />
-    <Compile Include="Common\QuestionType.cs" />
+    <Compile Include="Common\Enums\CategoryType.cs" />
+    <Compile Include="Common\Exceptions\CategoryDoesNotExistException.cs" />
+    <Compile Include="Common\Enums\HintType.cs" />
+    <Compile Include="Common\Enums\PlayerType.cs" />
+    <Compile Include="Common\Enums\QuestionType.cs" />
+    <Compile Include="Common\Utils\Validator.cs" />
     <Compile Include="Models\Category\Category.cs" />
-    <Compile Include="Common\DifficultyLevel.cs" />
+    <Compile Include="Common\Enums\DifficultyLevel.cs" />
     <Compile Include="Contracts\IAnswer.cs" />
     <Compile Include="Contracts\ICategory.cs" />
     <Compile Include="Contracts\IPlayer.cs" />
