--- a/Trivia.Core/Trivia.Core.csproj
+++ b/Trivia.Core/Trivia.Core.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DB.cs" />
+    <Compile Include="Database.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="Contracts\IEngine.cs" />
