Added icon to the application.

--- a/Trivia.UI/Trivia.UI.csproj
+++ b/Trivia.UI/Trivia.UI.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>QuizGameProjectLogo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -186,6 +189,9 @@
       <Project>{DCA06CD0-F54F-4EA9-A7E0-5C21961A3F03}</Project>
       <Name>Trivia</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="QuizGameProjectLogo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
