--- a/Trivia.Tests/Trivia.Tests.csproj
+++ b/Trivia.Tests/Trivia.Tests.csproj
@@ -61,8 +61,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CategoryTests.cs" />
-    <Compile Include="PlayerTests.cs" />
+    <Compile Include="Engine\DatabaseTests.cs" />
+    <Compile Include="Engine\EngineTests.cs" />
+    <Compile Include="Engine\Mocks\FakeEngine.cs" />
+    <Compile Include="Models\CategoryTests.cs" />
+    <Compile Include="Engine\FactoryTests.cs" />
+    <Compile Include="Models\PlayerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -78,6 +82,7 @@
       <Name>Trivia</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
