--- a/Trivia.Tests/Trivia.Tests.csproj
+++ b/Trivia.Tests/Trivia.Tests.csproj
@@ -61,16 +61,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Engine\DatabaseTests.cs" />
-    <Compile Include="Engine\EngineTests.cs" />
-    <Compile Include="Engine\Mocks\FakeEngine.cs" />
+    <Compile Include="EngineTests\DatabaseTests.cs" />
+    <Compile Include="EngineTests\EngineTests.cs" />
     <Compile Include="Models\CategoryTests.cs" />
-    <Compile Include="Engine\FactoryTests.cs" />
+    <Compile Include="EngineTests\FactoryTests.cs" />
     <Compile Include="Models\PlayerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Trivia.Core\Trivia.Core.csproj">
