--- a/Trivia.Tests/packages.config
+++ b/Trivia.Tests/packages.config
@@ -6,4 +6,5 @@
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
+  <package id="TestStack.White" version="0.13.3" targetFramework="net461" />
 </packages>
