--- a/Trivia.Tests/Trivia.Tests.csproj
+++ b/Trivia.Tests/Trivia.Tests.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="UITests\GameStartTests.cs" />
+    <Compile Include="UITests\PlayerModeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
