--- a/Trivia.Tests/Trivia.Tests.csproj
+++ b/Trivia.Tests/Trivia.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Models\CategoryTests.cs" />
     <Compile Include="CoreTests\FactoryTests.cs" />
     <Compile Include="Models\PlayerTests.cs" />
+    <Compile Include="Models\QuestionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
